feat: added integration tests for auth and report controllers